<resources>
    <string name="app_name">&#160;&#160;&#160;医健优选&#160;&#160;&#160;</string>
    <string name="action_settings">Settings</string>
    <string name="default_toolbar_title"></string>
    <string name="money">￥%1$s</string>
    <string name="count">x %1$s</string>
    <string name="frg_home_title">主页</string>
    <string name="frg_classfication_title">分类</string>
    <string name="frg_home_title_search">搜索</string>
    <string name="frg_user_info_title">我的</string>
    <string name="frg_user_info_text_login_or_register">登录/注册</string>
    <string name="frg_user_info_text_tip_collect">收藏</string>
    <string name="frg_user_info_text_tip_token">代币</string>
    <string name="frg_user_info_text_tip_footprints">足迹</string>
    <string name="frg_user_info_text_wait_pay">待付款</string>
    <string name="frg_user_info_text_wait_receive">待收货</string>
    <string name="frg_user_info_text_wait_commit">待评价</string>
    <string name="frg_user_info_text_wait_return">退换货</string>
    <string name="frg_user_info_text_my_all_order">我的全部订单</string>
    <string name="frg_user_info_text_my_health_record">我的健康档案</string>
    <string name="frg_user_info_text_address">收货地址管理</string>
    <string name="frg_user_info_text_compare">我的对比</string>
    <string name="frg_user_info_text_customer">联系客服</string>
    <string name="frg_user_info_text_suggest">意见反馈</string>
    <string name="frg_user_info_text_about_us">关于我们</string>
    <string name="frg_user_info_text_setting">设置</string>
    <string name="frg_user_info_text_add_realth_record_tip">添加健康档案，即可获取15代币！</string>
    <string name="title_activity_token">我的代币</string>
    <string name="act_token_text_pieces">代币余额</string>
    <string name="act_token_text_trade_detail">交易明细</string>
    <string name="act_token_text_exchange_token">兑换</string>
    <string name="title_activity_exchange_token">兑换代币</string>
    <string name="act_exchange_token_hint_input_token">输入兑换码</string>
    <string name="act_exchange_token_btn_exchange">立即兑换</string>
    <string name="title_activity_setting">设置</string>
    <string name="act_setting_view_modify_password">修改密码</string>
    <string name="act_setting_view_push_setting">推送设置</string>
    <string name="act_setting_view_about_us">关于我们</string>
    <string name="act_setting_view_terms_of_use">使用条款</string>
    <string name="act_setting_view_privacy_policy">隐私政策</string>
    <string name="act_setting_view_clear_cache">清理缓存</string>
    <string name="act_setting_view_logout">登出</string>
    <string name="title_activity_msg_center">消息中心</string>
    <string name="title_activity_consignee_address">地址管理</string>
    <string name="act_consignee_address_btn_default">默认</string>
    <string name="act_consignee_address_menu_add">添加</string>
    <string name="act_consignee_address_menu_save">保存</string>
    <string name="title_activity_address_edit">收货地址</string>
    <string name="title_activity_search">搜索</string>
    <string name="act_search_cancel">取消</string>
    <string name="act_search_search_tint">搜索商品/病种分类/分类</string>
    <string name="act_search_hot_search">热门搜索</string>
    <string name="act_search_last_search">最近搜索</string>
    <string name="act_search_text_delete_last_search">清除搜索历史</string>
    <string name="title_activity_pay">支付方式</string>
    <string name="pay_act_btn_pay">去支付</string>
    <string name="pay_act_text_pay_way">支付方式</string>
    <string name="pay_act_text_ali_pay">支付宝</string>
    <string name="pay_act_text_wechat_pay">微信支付</string>
    <string name="pay_act_text_baiduWallet_pay">百度钱包</string>
    <string name="pay_act_text_JDWallet_pay">京东钱包</string>
    <string name="pay_act_text_quick_pay">快捷支付</string>
    <string name="pay_act_text_union_pay">银联支付</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="act_order_detail_text_good_detail">商品详情</string>
    <string name="item_good_in_order_text_good_num">共%s件</string>
    <string name="item_good_in_order_text_good_freight">小计：￥%1$s</string>
    <string name="item_good_in_order_text_good_tip">此商品支持7天无条件退货</string>
    <string name="title_activity_good_list">商品列表</string>
    <string name="act_good_list_text_contrast">对比</string>
    <string name="act_good_list_text_contrast_span">(%1$s)</string>
    <string name="act_good_list_text_fitter_all">综合排序</string>
    <string name="act_good_list_text_fitter_popularity">太一认证</string>
    <string name="act_good_list_text_feature">特征筛选</string>
    <string name="act_good_list_text_fitter_seal">销量</string>
    <string name="act_good_list_text_fitter_fitter">筛选</string>
    <string name="title_activity_order_list">订单列表</string>
    <string name="act_good_list_text_order_id">订单号：%1$s</string>
    <string name="act_good_list_text_total">总额:￥%1$s</string>
    <string name="act_good_list_text_order_freight">共%1$s件商品 含运费 ￥%2$s</string>
    <string name="act_good_list_text_time">时间：%1$s</string>
    <string name="act_good_list_text_left_time">剩余付款时间:%1$s(逾期将取消)</string>
    <string name="title_activity_return_sale">退货申请</string>
    <string name="return_sale_text_service_type">服务类型</string>
    <string name="return_sale_btn_service_type_1">退货</string>
    <string name="return_sale_btn_service_type_2">换货</string>
    <string name="return_sale_text_amount">申请数量</string>
    <string name="return_sale_text_amount_refund">退货金额:￥%1$s (价格:%2$s - 使用代币:%3$s)</string>
    <string name="return_sale_text_amout_tip">您最多可提交数量为%s个</string>
    <string name="return_sale_text_question">问题描述</string>
    <string name="return_sale_edittext_question">请你在此描述详细问题...</string>
    <string name="return_sale_text_certificate">上传凭证</string>
    <string name="return_sale_text_certificate_tip">最多上传4张，每张不超过4M，支持JPG，PNG</string>
    <string name="return_sale_btn_submit">提交</string>
    <string name="title_activity_good_detail">商品详情</string>
    <string name="act_good_detail_text_tip">全场\n包邮</string>
    <string name="act_good_detail_text_market_price">市价：￥%1$s</string>
    <string name="act_good_detail_text_price_mark">￥</string>
    <string name="act_good_detail_btn_add_to_contract">加入对比</string>
    <string name="act_good_detail_text_perference">性能得分</string>
    <string name="act_good_detail_text_operator">易用性</string>
    <string name="act_good_detail_text_pro_score">品牌实力</string>
    <string name="act_good_detail_text_cost_perference">抽检得分</string>
    <string name="act_good_detail_text_export_score">专家评分</string>
    <string name="act_good_detail_text_apply">适用：</string>
    <string name="act_good_detail_text_good_basic_info">商品基本信息</string>
    <string name="act_good_detail_text_good_name">商品名称</string>
    <string name="act_good_detail_text_good_common_name">通用名称</string>
    <string name="act_good_detail_text_good_pro_enterprise">生产企业</string>
    <string name="act_good_detail_text_good_register_num">批准文号</string>
    <string name="act_good_detail_text_look_more">查看更多</string>
    <string name="act_good_detail_text_taiyi_register">太一认证</string>
    <string name="act_good_detail_text_iso_register">ISO认证</string>
    <string name="act_good_detail_text_3c_register">3C认证</string>
    <string name="act_good_detail_text_network_function">互联网功能</string>
    <string name="act_good_detail_text_pull_to_get_good_info">继续拖动，查看商品详情</string>
    <string name="act_good_detail_text_add_to_shopcart">加入购物车</string>
    <string name="act_good_detail_text_favorite">收藏</string>
    <string name="act_good_detail_text_comsuer">客服</string>
    <string name="act_good_detail_text_constract">对比</string>
    <string name="act_good_detail_layout_send_good">发货&amp;配送</string>
    <string name="act_good_detail_layout_after_sale">售后服务</string>
    <string name="act_good_detail_layout_privacy_prolicy">隐私政策</string>
    <string name="act_good_detail_text_sales">销量：%1$s件</string>
    <string name="act_good_detail_tip_add_to_cart_success">已添加至购物车</string>
    <string name="act_good_detail_comment_text_reply">客服回复 : %1$s</string>
    <string name="title_activity_login_and_register">登陆注册</string>
    <string name="act_login_and_register_text_back">返回</string>
    <string name="frg_login_et_phone">请输入手机号码</string>
    <string name="frg_login_et_pwd">请输入密码</string>
    <string name="frg_login_btn">立即登录</string>
    <string name="frg_login_tv_verify_text">动态验证码登录</string>
    <string name="frg_login_by_shear_qq_text">QQ登录</string>
    <string name="frg_login_by_shear_wechat_text">微信登录</string>
    <string name="frg_login_by_shear_sina_text">新浪登录</string>
    <string name="feg_register_check_phone_edit_mobile_text">请输入11位的手机号</string>
    <string name="frg_register_edit_verify_code_text">输入验证码</string>
    <string name="frg_register_btn_send_text">注册</string>
    <string name="frg_register_et_width_text">注册即视为同意太一用户协议</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="act_login_verify_title">动态验证码登录</string>
    <string name="act_register_btn_git_verify_code">获取验证码</string>
    <string name="act_register_btn_send_show_password_code">显示</string>
    <string name="title_activity_register_check_phone">注册1/2</string>
    <string name="act_register_check_phone_text_tip">请确保您的手机畅通，以接收验证短信。</string>
    <string name="act_register_check_phone_edit_mobile">请输入手机号码</string>
    <string name="act_register_check_phone_btn_next">下一步</string>
    <string name="title_activity_register">注册2/2</string>
    <string name="act_register_text_tip">验证码已发至：%1$s</string>
    <string name="act_register_edit_mobile">手机号码</string>
    <string name="act_register_edit_verify_code">验证码</string>
    <string name="act_register_btn_send_verify_code">短信验证码</string>
    <string name="act_register_btn_next">下一步</string>
    <string name="title_activity_forget_pwd">忘记密码</string>
    <string name="act_forget_pwd_title">找回密码</string>
    <string name="act_forget_pwd_btn_ok">确认</string>
    <string name="ftg_register_btn_git_pwd_code">忘记密码?</string>
    <string name="title_activity_after_sale">售后服务</string>
    <string name="check_pending_query">进度查询</string>
    <string name="check_pending_state">状态：填写发货单</string>
    <string name="check_pending_cancel">取消申请</string>
    <string name="check_pending_edit_imformation">填写发货信息</string>
    <string name="check_pending_address">查看邮寄地址</string>
    <string name="title_activity_after_sale_id">服务编号: %s</string>
    <string name="title_activity_after_sale_quantity">X%s件</string>
    <string name="title_activity_after_sale_audit_time">审批时间:%s</string>
    <string name="check_pass_query">进度查询</string>
    <string name="check_pass_state">状态：</string>
    <string name="check_pass_cancel">取消申请</string>
    <string name="verification_pending_query">进度查询</string>
    <string name="verification_pending_state">状态：</string>
    <string name="verification_pending_cancel">取消申请</string>
    <string name="sale_return_success_query">进度查询</string>
    <string name="act_order_list_btn_cannel">取消订单</string>
    <string name="act_order_list_btn_look_logistics">查看物流</string>
    <string name="act_order_list_btn_receive">确认收货</string>
    <string name="act_suggest_ll_input_text">提交</string>
    <string name="act_suggest_et_contact_hint_text">请填写您的联系方式(手机号码或邮箱)</string>
    <string name="act_suggest_et_name_hint_text">请填写您的姓名</string>
    <string name="act_suggest_tv_contact">联系方式</string>
    <string name="act_suggest_et_content_text">请输入您要返回的内容</string>
    <string name="order_freight_text">共%1$s件商品 含运费 ￥%2$s</string>
    <string name="orderId_text">订单号：123456789</string>
    <string name="order_money_text">￥1588.00</string>
    <string name="order_receive_state">待收货</string>
    <string name="item_good_list_all_sort_text">综合排序</string>
    <string name="item_good_list_price_sort_text">价格排序</string>
    <string name="item_good_list_property_sort_text">性能排序</string>
    <string name="item_good_list_good_sort_text">好评排序</string>
    <string name="item_good_list_easy_sort_text">易用排序</string>
    <string name="item_good_list_grade_sort_text">打分排序</string>
</resources>