<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:taiyi="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginBottom="@dimen/common_margin_top_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bgLayout"
        android:orientation="vertical">

        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_my_all_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_top_line_full="true"
            taiyi:src="@drawable/ic_all_order"
            taiyi:text="@string/frg_user_info_text_my_all_order" />

        <com.t1_network.taiyi.widget.SettintView
            android:visibility="gone"
            android:id="@+id/frg_user_info_text_my_health_record"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_health_record"
            taiyi:text="@string/frg_user_info_text_my_health_record" />

        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_address"
            taiyi:text="@string/frg_user_info_text_address" />

        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_compare"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_compare"
            taiyi:text="@string/frg_user_info_text_compare" />


        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_customer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_customer"
            taiyi:text="@string/frg_user_info_text_customer" />

        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_suggest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_suggest"
            taiyi:text="@string/frg_user_info_text_suggest" />

        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_about_us"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"

            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_about_us"
            taiyi:text="@string/frg_user_info_text_about_us" />

        <com.t1_network.taiyi.widget.SettintView
            android:id="@+id/frg_user_info_text_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/c_setting_view_item_height"
            taiyi:show_bottom_line_full="true"
            taiyi:show_top_line_wrap="true"
            taiyi:src="@drawable/ic_setting"
            taiyi:text="@string/frg_user_info_text_setting" />

    </LinearLayout>
</LinearLayout>


