<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.t1_network.taiyi.controller.fragment.LoginFrg">


    <RelativeLayout
        android:id="@+id/frg_register_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/act_title_top">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/act_title_margin_top"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="@dimen/frg_register_et_width"
                android:layout_height="@dimen/frg_register_et_height">


                <EditText
                    android:textColor="@color/bgLayout"
                    android:text="15680030824"
                    android:id="@+id/frg_login_et_phone_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/frg_login_et_phone"
                    android:inputType="number"
                    android:textColorHint="@color/btn_in_verify_full" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/act_content_view_line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/frg_register_et_width"
                android:layout_height="@dimen/frg_register_et_height">


                <EditText
                    android:textColor="@color/bgLayout"
                    android:text="123456"
                    android:id="@+id/frg_login_et_password"
                    android:layout_width="@dimen/frg_register_verify_width"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/frg_login_et_pwd"
                    android:inputType="textPassword"
                    android:textColorHint="@color/btn_in_verify_full" />

                <TextView
                    android:id="@+id/ftg_register_btn_git_pwd_code"
                    android:layout_width="@dimen/act_register_tv_send_verify_code_width"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="@dimen/frg_register_tv_btn_padding"
                    android:text="@string/ftg_register_btn_git_pwd_code"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_small" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/act_content_view_line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/text_white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/frg_login_btn_login"
                android:layout_width="@dimen/frg_register_et_width"
                android:layout_height="@dimen/frg_register_tv_btn_width"
                android:layout_marginTop="@dimen/frg_register_input_margin_top"
                android:background="@drawable/btn_in_login_full_info"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/frg_login_btn"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_big" />

            <TextView
                android:id="@+id/frg_login_tv_verify_login"
                android:layout_width="@dimen/frg_register_et_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frg_register_tv_margin_tip"
                android:gravity="center_horizontal"
                android:text="@string/frg_login_tv_verify_text"
                android:textColor="@color/btn_in_verify_full"
                android:textSize="@dimen/text_small" />

        </LinearLayout>
    </RelativeLayout>


</FrameLayout>
