<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgRoot"
    android:orientation="vertical"
    android:paddingLeft="@dimen/act_suggest_root_margin_left"
    android:paddingRight="@dimen/act_suggest_root_margin_right"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.t1_network.taiyi.controller.activity.SuggestAct"
    tools:showIn="@layout/act_suggest">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/act_suggest_et_content_height"
                android:layout_marginTop="@dimen/act_suggest_et_name_margin_top"
                android:background="@drawable/btn_in_suggest_list_full_info">

                <EditText
                    android:id="@+id/act_suggest_et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/act_suggest_et_all_margin_"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/act_suggest_et_content_text"
                    android:inputType="textMultiLine"
                    android:maxLines="7"
                    android:minLines="6"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray_mid"
                    android:textSize="@dimen/text_mid"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/act_suggest_et_contact_margin"
                android:layout_marginTop="@dimen/act_suggest_et_contact_margin"
                android:text="@string/act_suggest_tv_contact"
                android:textColor="@color/text_gray_deep"
                android:textSize="@dimen/text_mid"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/act_suggest_et_name_height"
                android:background="@drawable/btn_in_suggest_list_full_info">

                <EditText
                    android:id="@+id/act_suggest_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/act_suggest_et_all_margin_"
                    android:background="@null"
                    android:hint="@string/act_suggest_et_name_hint_text"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray_mid"
                    android:textSize="@dimen/text_mid"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/act_suggest_et_name_height"
                android:layout_marginTop="@dimen/act_suggest_et_name_margin_top"
                android:background="@drawable/btn_in_suggest_list_full_info">

                <EditText
                    android:id="@+id/act_suggest_et_contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/act_suggest_et_all_margin_"
                    android:background="@null"
                    android:hint="@string/act_suggest_et_contact_hint_text"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray_mid"
                    android:textSize="@dimen/text_mid"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/act_suggest_ll_input"
                android:layout_width="match_parent"
                android:layout_height="47.06dp"
                android:layout_marginTop="17.65dp"
                android:background="@drawable/btn_in_evaluate_info"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/act_suggest_ll_input_text"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_big"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
